@@ -8,6 +8,8 @@
 
 #import <Foundation/Foundation.h>
 
+#import <WebKit/WebControllerPolicyHandler.h>
+
 @class WebDownloadHandler;
 @class WebDataSource;
 @protocol WebResourceClient;
@@ -17,10 +19,10 @@
 {
     NSURL *currentURL;
     WebDataSource *dataSource;
-    BOOL processedBufferedData;
     BOOL isFirstChunk;
     WebDownloadHandler *downloadHandler;
     id <WebResourceProgressHandler> downloadProgressHandler;
+    WebContentAction policyAction;
 }
 - initWithDataSource:(WebDataSource *)dataSource;
 - (WebDownloadHandler *)downloadHandler;
